# cppLinq

./: CMakeLists.txt  README.md
include/: linq.hpp
src/: smoke_test.cpp  test.cpp
